<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/tvArtistTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_artist_title"
        android:textAppearance="@style/TextAppearance.GeArt.Display" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="14dp">

        <Button
            android:id="@+id/btnFilterMarket"
            style="@style/Widget.GeArt.Button.Outline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_artist_filter_market"
            android:layout_marginEnd="4dp" />

        <Button
            android:id="@+id/btnFilterDirect"
            style="@style/Widget.GeArt.Button.Outline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_artist_filter_direct"
            android:layout_marginHorizontal="4dp" />

        <Button
            android:id="@+id/btnFilterMine"
            style="@style/Widget.GeArt.Button.Outline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_artist_filter_mine"
            android:layout_marginStart="4dp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCommissionsArtist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layerType="software"
        android:background="@drawable/divider_dashed"
        android:layout_marginVertical="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnViewProfile"
            style="@style/Widget.GeArt.Button.Outline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nav_my_profile" />

        <Button
            android:id="@+id/btnChats"
            style="@style/Widget.GeArt.Button.Outline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nav_chats" />

        <Button
            android:id="@+id/btnNotifications"
            style="@style/Widget.GeArt.Button.Outline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nav_notifications" />

        <Button
            android:id="@+id/btnLogout"
            style="@style/Widget.GeArt.Button.Outline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nav_logout" />
    </LinearLayout>

</LinearLayout>
